# idatt2503

./: .gitmodules  README.md
.github/workflows/: c_fuzzing.yml
binary/: rop_disassembly.txt
binary/bird/: bird_disassembly.txt
binary/hello/: hello_disassembly.txt
binary/rop-it/: Dockerfile  README.md  docker-compose.yml
binary/rop-it/py/: main.py
binary/rop-it/rop-it/: rop
ctf/: bird.py  hello.py  letsgo.py
exercises/04/: README.md
exercises/04/01/: README.md
exercises/04/02/: README.md
exercises/04/02/c/: .gitignore
exercises/04/02/cpp/: .gitignore
exercises/04/02/rust/: .gitignore
exercises/04/02/rust/src/: main.rs
exercises/04/qemu_assembly/: README.md
exercises/04/qemu_assembly/workspace/01/: .gitignore  asm-intel.lang  redirect_stderr.txt
exercises/04/qemu_assembly/workspace/03/: README.md
exercises/05/: Dockerfile  c_fuzzing.yml  replace.h
exercises/05/c/: CMakeLists.txt  README.md  fuzz_main.c  main.c  replace.c
exercises/05/c/tests/: CMakeLists.txt
exercises/05/tests/: replace_test.c
exercises/06/: README.md
exercises/06/01/: CMakeLists.txt  main.cpp
exercises/06/02/: Makefile  README.md  package-lock.json  server.js
exercises/06/02/src/components/: HelloWorld.vue
exercises/06/One/: CMakeLists.txt  README.md  main.cpp
exercises/crypto/01/: 01.py  02.py  03.py  04.py  05.py  README.md
exercises/crypto/02/: 02.py  03.py  AES.py  README.md
exercises/crypto/03/: 01.py  02.py  03.py  04.py  README.md
exercises/crypto/04/: 01.py  02.py  03.py  05.py  README.md
exercises/crypto/05/: 01.py  README.md
exercises/qemu_assembly/: Dockerfile  docker-compose.yml
exercises/qemu_assembly/workspace/01/: README.md  hello.s
exercises/security/04/01/: .gitignore  LICENSE  README.md
exercises/security/04/02/: README.md
exercises/security/04/02/c/: main.c
exercises/security/04/02/cpp/: main.cpp
exercises/security/04/02/rust/src/: main.rs
exercises/security/04/03/: README.md
exercises/security/04/qemu_assembly/: README.md
exercises/security/05/: Makefile  README.md  c_fuzzing.yml  docker-compose.yml  replace.c
exercises/security/05/corpus/: input3.txt  repeating_specials.txt
exercises/security/05/tests/: CMakeLists.txt
exercises/security/06/02/: .gitignore  package.json
exercises/security/06/02/src/components/: HelloWorld.vue
zipslip/: main.py
